--- a/Thesis/slotbeschouwingen.tex
+++ b/Thesis/slotbeschouwingen.tex
@@ -9,8 +9,8 @@ onderzoekmogelijkheden.
 De basisidee achter deze scriptie is het identificeren van beelden
 met vaagverzamelingen, zodanig dat vaagsimilariteitsmaten kunnen gebruikt worden
 om de graduele gelijkenis tussen twee beelden na te gaan. 
-We construeren dus similariteitsmaten voor beelden door een manier om beelden te
-identificeren met vaagverzamelingen, te combineren met een vaagsimilariteitsmaat.
+We construeren similariteitsmaten voor beelden door een manier om beelden te
+identificeren met vaagverzamelingen te combineren met een vaagsimilariteitsmaat.
 Een eerste bijdrage van dit eindwerk is het herschrijven van de beschouwde
 vaagsimilariteitsmaten naar een vorm die, onder bepaalde voorwaarden, een stuk
 sneller kan berekend worden. 
@@ -27,7 +27,7 @@ hebben we aangetoond dat ook beeldonderdelen een oplossing kunnen bieden voor
 het resolutieprobleem. 
 
 Door het universum te laten bestaan uit kleuren, bekomen we maten van het tweede
-type. Die maten noemen we kleurgebaseerde similariteitsmaten. Similariteitsmaten
+type. Die maten noemen we kleurgebaseerd. Similariteitsmaten
 die gebruik maken van histogrammen, zijn voorbeelden van kleurgebaseerde 
 maten. Omdat vaagsimilariteitsmaten niet rechtstreeks kunnen
 toegepast worden op traditionele histogrammen, hebben we pseudo-vage histogrammen
