--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -75,7 +75,8 @@
                                 %door bibtex wordt gelezen
 
 
-\renewcommand{\baselinestretch}{1.2}
+
+\setbottommargin{3cm} % dan komt index beter uit...
 
 \printindex
 
