--- a/Thesis/fundamenten.tex
+++ b/Thesis/fundamenten.tex
@@ -404,7 +404,7 @@ bijkomende eigenschappen vooropgesteld
 
 Op basis van de manier waarop de aggregatie gebeurt, kunnen aggregatieoperatoren onderverdeeld
 worden in verschillende categorie\"en \cite{grabisch:fuzzy_aggregation_of_numerical_preferences}:
-conjuctieve, disjunctieve, compenserende, niet-compenserende en gewogen operatoren.
+conjunctieve, disjunctieve, compenserende, niet-compenserende en gewogen operatoren.
 In \cite{detyniecki:numerical_aggregation_operators} wordt er een overzicht gegeven van
 de bestaande aggregatieoperatoren. Het rekenkundig en het gewogen gemiddelde zijn
 veelgebruikte aggregatieoperatoren. Ook het minimum en het maximum behoren
