--- a/Thesis/implementatie.tex
+++ b/Thesis/implementatie.tex
@@ -134,7 +134,7 @@ vergroten. Als we bijvoorbeeld het commando
 \texttt{java -Xmx256M -jar imperforate.jar} gebruiken,
 dan wordt de maximale grootte van het grabbelgeheugen verhoogd tot 256 MB. 
 
-Figuur~\ref{fig:imperforate_1} toont het initi\"ele venster van Imperforate. Vooralleer er iets
+Figuur~\ref{fig:imperforate_1} toont het initi\"ele venster van Imperforate. Vooraleer er iets
 kan berekend worden, moet er eerst een beeldencollectie ingeladen worden.
 Dat kan door op de knop ``Add ...'' te klikken, waardoor het venster uit 
 figuur~\ref{fig:imperforate_2} verschijnt. Via dat venster kan er een 
