--- a/Thesis/kleurgeb.tex
+++ b/Thesis/kleurgeb.tex
@@ -57,7 +57,7 @@ uit onze testcollectie. In figuur~\ref{fig:alle_histn_geel_bootje} worden de pse
 getoond van alle beelden uit de testcollectie, die relevant zijn ten opzichte van dat voorbeeld.
 Zoals ge\"illustreerd in figuur~\ref{fig:constr_sim_op_basis_van_pseudo-vaag_hist}, kunnen we 
 dan similariteitsmaten construeren door een vaagsimilariteitsmaat toe te passen op 
-pseudo-vage histogrammen ge\"associeerd met de beelden in kwestie.
+pseudo-vage histogrammen geassocieerd met de beelden in kwestie.
 
 \begin{figure}[!bp]
 \vspace{2pt}
@@ -506,7 +506,7 @@ waarbij er ook nog een aantal ``naburige'' bins een waarde hebben die verschilt 
 \includegraphics[width=\textwidth]{/home/klbostee/Workspace/Thesis/plots/histgeb3_gggrs_en_cputimes_filled.eps}
 \vspace{1pt}
 \caption{\label{fig:histgeb_gggrs_en_cputimes}De GGGR-waarde en de gebruikte rekentijd in ms voor elk 
-van de similariteitsmaten op basis van histrogrammen.}
+van de similariteitsmaten op basis van histogrammen.}
 \end{figure}
 %
 \begin{figure}[!bp]
@@ -937,7 +937,7 @@ spatiale locaties van de beeldpunten. In
 de praktijk zijn echter niet alle pixels even belangrijk. Zo kan het
 bijvoorbeeld wenselijk zijn om minder belang te hechten aan de kleur van
 de achtergrondpixels. Doordat de spatiale informatie genegeerd wordt,
-kunnen er bovendien ook valse postieven optreden. Als we de pixels van een
+kunnen er bovendien ook valse positieven optreden. Als we de pixels van een
 beeld op een willekeurig manier verplaatsen, dan zal er immers niets veranderen aan
 de geassocieerde histogrammen. Het beeld zelf zal er dan meestal wel totaal anders uitzien.  
 
@@ -1432,7 +1432,7 @@ de resultaten getoond van de gladde spatiale SCT-histogrammen in combinatie met 
 \includegraphics[width=\textwidth]{/home/klbostee/Workspace/Thesis/plots/histgeb_sct2_gggrs_en_cputimes_filled.eps}
 \vspace{1pt}
 \caption{\label{fig:histgeb_sct_gggrs_en_cputimes}De GGGR-waarde en de gebruikte rekentijd in ms voor elk 
-van de similariteitsmaten op basis van uitgebreide SCT-histrogrammen.}
+van de similariteitsmaten op basis van uitgebreide SCT-histogrammen.}
 \end{figure}
 
 \begin{table}[bp]
