--- a/Thesis/pixelgeb.tex
+++ b/Thesis/pixelgeb.tex
@@ -381,7 +381,7 @@ Voor het toepassen van de vaagsimilariteitsmaten op
 intermediaire beelden of op beeldonderdelen, beschouwen we de drie manieren uit \ref{sectie:kleurbeelden_similariteitsmaten}:
 (1) eerst omzetten naar grijswaardebeelden, 
 (2) toepassen op de afzonderlijke kleurcomponenten en 
-(3) traliegebaseerd. We gebruiken het gemiddelde om de simimariteiten te aggregeren
+(3) traliegebaseerd. We gebruiken het gemiddelde om de similariteiten te aggregeren
 bij de componentsgewijze aanpak.
 
 \subsection{Resultaten van experimenten}
