--- a/Thesis/slotbeschouwingen.tex
+++ b/Thesis/slotbeschouwingen.tex
@@ -36,7 +36,7 @@ Dat vaaghistogram heeft als voordeel dat het minder gevoelig is voor
 problemen die optreden als gevolg van de kleurkwantisatie. Om ook bij de pseudo-vage
 histogrammen de invloed van die kwantisatieproblemen te beperken, hebben we 
 uitgebreide histogrammen gedefinieerd. Die uitgebreide histogrammen laten bovendien
-ook toe om spatiale informatie te incorporeren
+ook toe om spatiale informatie te incorporeren.
 
 Bij de pixelgebaseerde maten blijkt het componentsgewijs vergelijken van intermediaire
 beelden goed te werken. In het bijzonder leiden de intermediaire beelden op basis van 
@@ -69,11 +69,11 @@ van beelden. Het andere programma is het eigenlijke prototype.
 In \ref{sectie:rekentijd} hebben we vermeld dat het bij echte CBIR mogelijk is
 om berekeneningen op voorhand te doen. Zo zouden de histogrammen van de beelden
 bijvoorbeeld mee opgeslagen kunnen worden in de databank. Bij echte CBIR kunnen
-er daarom ook meer complexe similariteitsmtaten gebruikt worden. Door de beelden
-op voorhand te segementeren, zou het bijvoorbeeld mogelijk zijn om bij het vergelijken
+er daarom ook meer complexe similariteitsmaten gebruikt worden. Door de beelden
+op voorhand te segmenteren, zou het bijvoorbeeld mogelijk zijn om bij het vergelijken
 rekening te houden met de vorm van de objecten in de beelden. In het 
 geval van het similariteitsgebaseerd rangschikken van de zoekresultaten kunnen we 
-geen gebruik maken van de vorm, vermits de segementatie aanleiding zou geven tot 
+geen gebruik maken van de vorm, vermits de segmentatie aanleiding zou geven tot 
 similariteitsmaten met een veel te lange rekentijd. In de context van echte CBIR is 
 er bijgevolg nog zeer veel ruimte voor het construeren van nieuwe vage 
 similariteitsmaten voor beelden. Met de nodige creativiteit is het uiteraard ook 
