--- a/Thesis/thesis.bib
+++ b/Thesis/thesis.bib
@@ -42,7 +42,7 @@
 
 @MastersThesis{victor:aggregatieoperatoren,
   	author 		= {Victor, P.},
-  	title 		= {Toepassingsgerichte studie van aggragatie-operatoren},
+  	title 		= {Toepassingsgerichte studie van aggregatie-operatoren},
   	school 		= {Ghent University},
   	year 		= 2005,
 }
@@ -206,7 +206,7 @@
 
 @Article{wu:color_quantization_by_dynamic_programming_and_principal_analysis,
    	author 		= {Wu, X.},
-   	title 		= {Color quantization by dynamic programming and pricipal analysis},
+   	title 		= {Color quantization by dynamic programming and principal analysis},
    	journal 	= {ACM Transactions on Graphics},
    	year 		= 1992,
    	volume 		= {11},
@@ -215,7 +215,7 @@
 
 @Article{de_cock:on_unsuitable_relations_for_approx_equal,
   	author 		= {De Cock, M. and Kerre, E. E.},
-  	title 		= {On (un)suitable fuzzy relations tot model approximate equality},
+  	title 		= {On (un)suitable fuzzy relations to model approximate equality},
   	journal 	= {Fuzzy Sets and Systems},
   	volume 		= 133,
   	number 		= 2,
