--- a/Thesis/kleurgeb.tex
+++ b/Thesis/kleurgeb.tex
@@ -1086,7 +1086,7 @@ m(k)= \begin{cases}
 voor alle $k \in \mathbb{N}$. Dit is de corresponderende matrix: 
 \begin{displaymath}
 2^{-2 \cdot R_1} \cdot \left[ \begin{array}{@{\ }c@{\ }c@{\ }c@{\ }c@{\ }c@{\ }c@{\ }c@{\ }} \binom{2 \cdot R_1}{2\cdot R_2} & \binom{2 \cdot R_1}{2\cdot R_2 -1} & 
-\ldots & \binom{2\cdot R_1}{R_1} & \ldots & \binom{2\cdot R_1}{R_1+1} &
+\ldots & \binom{2\cdot R_1}{R_1} & \binom{2\cdot R_1}{R_1+1} & \ldots &
 \binom{2\cdot R_1}{2\cdot R_1} \end{array} \right] =
 2^{-2 \cdot R_1} \cdot \left[ \begin{array}{@{\ }c@{\ }c@{\ }c@{\ }c@{\ }} \binom{2 \cdot R_1}{0} & \binom{2 \cdot R_1}{1} & 
 \ldots & \binom{2\cdot R_1}{2\cdot R_1} \end{array} \right]
