--- a/Thesis/implementatie.tex
+++ b/Thesis/implementatie.tex
@@ -79,7 +79,7 @@ ondersteunt het gemiddelde, het maximum, het minimum, het product en de
 algebra\"ische som. Het zou echter interessant zijn om na te gaan of er betere
 resultaten kunnen bekomen worden door meer geavanceerde operatoren te gebruiken.
 
-De klasse {\klassefont Imililarity} abstraheert het ophalen en rangschikken van
+De klasse {\klassefont Imilarity} abstraheert het ophalen en rangschikken van
 beelden. Codefragement~\ref{code:simple_example} bevat een zeer eenvoudig 
 \begin{code}[bp]
 \vspace{5pt}
